# chromata

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  build.rs  deny.toml  dev.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  test.yml
benches/: chromata_bench.rs
data/base16/: gruvbox-dark-hard.yaml
examples/: bevy_color_demo.rs  colored_terminal.rs  comfy_table_demo.rs  crossterm_demo.rs  cursive_demo.rs  egui_gallery.rs  export_css.rs  find_theme.rs  iced_demo.rs  image_gradient.rs  list_all.rs  macroquad_demo.rs  owo_colors_demo.rs  palette_demo.rs  plotters_chart.rs  preview_ansi.rs  ratatui_demo.rs  slint_demo.rs  syntect_demo.rs  termion_demo.rs  tiny_skia_demo.rs  wgpu_demo.rs
src/: iter.rs  lib.rs  prelude.rs  traits.rs  types.rs
src/base16/: _0x96f.rs  _3024.rs  apathy.rs  apprentice.rs  ascendancy.rs  ashes.rs  atelier_cave.rs  atelier_cave_light.rs  atelier_dune.rs  atelier_dune_light.rs  atelier_estuary.rs  atelier_estuary_light.rs  atelier_forest.rs  atelier_forest_light.rs  atelier_heath.rs  atelier_heath_light.rs  atelier_lakeside.rs  atelier_lakeside_light.rs  atelier_plateau.rs  atelier_plateau_light.rs  atelier_savanna.rs  atelier_savanna_light.rs  atelier_seaside.rs  atelier_seaside_light.rs  atelier_sulphurpool.rs  atelier_sulphurpool_light.rs  atlas.rs  ayu_dark.rs  ayu_light.rs  ayu_mirage.rs  aztec.rs  bespin.rs  black_metal.rs  black_metal_bathory.rs  black_metal_burzum.rs  black_metal_dark_funeral.rs  black_metal_gorgoroth.rs  black_metal_immortal.rs  black_metal_khold.rs  black_metal_marduk.rs  (+266 more)
src/base24/: _0x96f.rs  _3024_day.rs  _3024_night.rs  adventure_time.rs  alien_blood.rs  argonaut.rs  arthur.rs  atelier_sulphurpool.rs  ayu_dark.rs  ayu_light.rs  ayu_mirage.rs  banana_blueberry.rs  batman.rs  birds_of_paradise.rs  blazer.rs  blue_berry_pie.rs  blue_matrix.rs  bluloco_dark.rs  bluloco_light.rs  borland.rs  breeze.rs  broadcast.rs  brogrammer.rs  builtin_dark.rs  builtin_light.rs  builtin_pastel_dark.rs  builtin_solarized_dark.rs  builtin_solarized_light.rs  builtin_tango_dark.rs  builtin_tango_light.rs  catppuccin_frappe.rs  catppuccin_latte.rs  catppuccin_macchiato.rs  catppuccin_mocha.rs  chalk.rs  chalkboard.rs  challenger_deep.rs  ciapre.rs  clrs.rs  cobalt2.rs  (+145 more)
src/emacs/: arjen.rs  assemblage.rs  bharadwaj.rs  bharadwaj_slate.rs  billw.rs  blackboard.rs  blippblopp.rs  bliss.rs  blue_sea.rs  boron.rs  bubbleberry.rs  busybee.rs  charcoal_black.rs  cherry_blossom.rs  clarity.rs  clues.rs  colonoscopy.rs  comidia.rs  dakrone.rs  dark_blue2.rs  dark_krystal.rs  dark_laptop.rs  dark_pink.rs  deep_blue.rs  deep_thought.rs  desert.rs  django.rs  dracula.rs  emacs_21.rs  emacs_nw.rs  euphoria.rs  evenhold.rs  feng_shui.rs  firecode.rs  fischmeister.rs  flatland_black.rs  github.rs  goldenrod.rs  gray1.rs  gray30.rs  (+63 more)
src/integration/: bevy_color.rs  colored.rs  comfy_table.rs  crossterm.rs  cursive.rs  egui.rs  iced.rs  image.rs  macroquad.rs  mod.rs  owo_colors.rs  palette.rs  plotters.rs  ratatui.rs  slint.rs  syntect.rs  termion.rs  tiny_skia.rs  wgpu.rs
src/popular/: ayu.rs  catppuccin.rs  dracula.rs  everforest.rs  flexoki.rs  github.rs  gruvbox.rs  horizon.rs  kanagawa.rs  material.rs  mod.rs  monokai.rs  moonlight.rs  nightfox.rs  nord.rs  one_dark.rs  poimandres.rs  rose_pine.rs  snazzy.rs  solarized.rs  synthwave.rs  tokyo_night.rs  tomorrow.rs  vesper.rs  zenburn.rs
src/vim/: _0x7a69_dark.rs  _256_grayvim.rs  _256_jungle.rs  _256_noir.rs  advantage.rs  adventurous.rs  af.rs  anderson.rs  angr.rs  apprentice.rs  arcadia.rs  archery.rs  argonaut.rs  ashen.rs  asmanian_blood.rs  atom.rs  aurora.rs  autumnleaf.rs  babymate256.rs  base.rs  baycomb.rs  bayqua.rs  bclear.rs  beachcomber.rs  beauty256.rs  beekai.rs  behelit.rs  benlight.rs  benokai.rs  biogoo.rs  birds_of_paradise.rs  bitterjug.rs  blackboard.rs  blackdust.rs  blacklight.rs  blazer.rs  blue.rs  bluechia.rs  bluenes.rs  blueprint.rs  (+431 more)
tests/: framework_integrations.rs  integration.rs  property.rs  snapshots.rs
tests/snapshots/: snapshots__snapshot_base16_gruvbox_dark_hard.snap  snapshots__snapshot_base16_mod_header.snap  snapshots__snapshot_base24_adventure_time.snap  snapshots__snapshot_base24_mod_header.snap  snapshots__snapshot_emacs_dracula.snap  snapshots__snapshot_emacs_mod_header.snap  snapshots__snapshot_popular_gruvbox.snap  snapshots__snapshot_vim_mod_header.snap  snapshots__snapshot_vim_monokai.snap
xtask/: Cargo.toml
xtask/src/: check.rs  clean.rs  codegen.rs  main.rs
xtask/src/fetch/: base16.rs  base24.rs  emacs.rs  mod.rs  vim.rs
xtask/src/generate/: base16.rs  base24.rs  emacs.rs  mod.rs  vim.rs
