[workspace]
members = ["xtask"]

[package]
name = "chromata"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "1000+ editor color themes as compile-time Rust constants"
license = "GPL-3.0-only"
repository = "https://github.com/resonant-jovian/chromata"
documentation = "https://docs.rs/chromata"
readme = "README.md"
keywords = ["color", "theme", "colorscheme", "syntax", "palette"]
categories = ["no-std", "value-formatting", "visualization"]
exclude = ["data/", "xtask/"]

[features]
default = ["popular"]

# Curated subset of ~50 most popular themes (gruvbox, solarized, nord,
# dracula, catppuccin, monokai, one-dark, tokyo-night, rose-pine, etc.)
popular = []

# Full collections by source ecosystem
base16 = []
base24 = []
vim = []
emacs = []

# Bring everything
all = ["base16", "base24", "vim", "emacs"]

# Framework integration (optional dependencies)
ratatui-integration = ["dep:ratatui"]
egui-integration = ["dep:egui"]
iced-integration = ["dep:iced_core"]
crossterm-integration = ["dep:crossterm"]
serde-support = ["dep:serde"]

[dependencies]
ratatui = { version = "0.30.0", optional = true, default-features = false }
egui = { version = "0.34.0", optional = true, default-features = false }
iced_core = { version = "0.14.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
libm = "0.2.16"
