[workspace]
members = ["xtask"]

[workspace.lints.clippy]
unwrap_used = "deny"
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "chromata"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "1000+ editor color themes as compile-time Rust constants"
license = "GPL-3.0-only"
authors = ["Albin Sjögren <albin@sjoegren.se>"]
repository = "https://github.com/resonant-jovian/chromata"
documentation = "https://docs.rs/chromata"
readme = "README.md"
keywords = ["color", "theme", "colorscheme", "syntax", "palette"]
categories = ["no-std", "value-formatting", "visualization"]
exclude = ["data/", "xtask/"]

[lints]
workspace = true

[features]
default = ["popular"]

# Curated subset of ~50 most popular themes (gruvbox, solarized, nord,
# dracula, catppuccin, monokai, one-dark, tokyo-night, rose-pine, etc.)
popular = []

# Full collections by source ecosystem
base16 = []
base24 = []
vim = []
emacs = []

# Bring everything
all = ["popular", "base16", "base24", "vim", "emacs"]

# Framework integration (optional dependencies)
bevy-color-integration = ["dep:bevy_color"]
colored-integration = ["dep:colored"]
comfy-table-integration = ["dep:comfy-table"]
crossterm-integration = ["dep:crossterm"]
cursive-integration = ["dep:cursive_core"]
egui-integration = ["dep:egui"]
iced-integration = ["dep:iced_core"]
image-integration = ["dep:image"]
macroquad-integration = ["dep:macroquad"]
owo-colors-integration = ["dep:owo-colors"]
palette-integration = ["dep:palette"]
plotters-integration = ["dep:plotters"]
ratatui-integration = ["dep:ratatui"]
slint-integration = ["dep:slint"]
syntect-integration = ["dep:syntect"]
termion-integration = ["dep:termion"]
tiny-skia-integration = ["dep:tiny-skia"]
wgpu-integration = ["dep:wgpu"]
serde-support = ["dep:serde"]

[dependencies]
bevy_color = { version = "0.16", optional = true }
colored = { version = "3", optional = true }
comfy-table = { version = "7", optional = true, default-features = false, features = ["custom_styling"] }
crossterm = { version = "0.29.0", optional = true }
cursive_core = { version = "0.4", optional = true, default-features = false }
egui = { version = "0.34.0", optional = true, default-features = false }
iced_core = { version = "0.14.0", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
macroquad = { version = "0.4", optional = true }
owo-colors = { version = "4", optional = true }
palette = { version = "0.7", optional = true, default-features = false, features = ["std"] }
plotters = { version = "0.3", optional = true, default-features = false, features = ["svg_backend"] }
ratatui = { version = "0.30.0", optional = true, default-features = false }
slint = { version = "1", optional = true }
syntect = { version = "5", optional = true, default-features = false }
tiny-skia = { version = "0.11", optional = true }
wgpu = { version = "25", optional = true, default-features = false }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
libm = "0.2.16"

[target.'cfg(unix)'.dependencies]
termion = { version = "4", optional = true }

[dev-dependencies]
proptest = "1"
insta = "1"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
