[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34-deprecated"
ureq = "3.3.0"
